<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gouda.vivek.radiobutton.MainActivity">

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioButtonYes"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioButtonNo"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/button_maybe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioButtonMaybe"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioButtonGroup"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textViewSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/text_given_sb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSeekBar"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/radioButtonGroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/result_tv"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/hideseek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textViewtoggle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColorLink="@android:color/holo_red_light"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="@dimen/activity_vertical_margin" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewtoggle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/toggleButton" />

    <TextView
        android:text="@string/toggle_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/toggleTV"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:visibility="invisible" />
</RelativeLayout>
